Somewhat workable state.
